--- a/apps/omega/package.json
+++ b/apps/omega/package.json
@@ -63,7 +63,7 @@
     "typescript": "^5.7.3",
     "vite": "^6.1.0",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "3.0.8",
+    "vitest": "^3.0.8",
     "vite-plugin-singlefile": "2.2.0"
   }
 }
