--- a/packages/agent-infra/mcp-servers/browser/Dockerfile
+++ b/packages/agent-infra/mcp-servers/browser/Dockerfile
@@ -1,8 +1,8 @@
 ######################## 1) build  stage ########################
 FROM node:22.12-alpine AS builder
 
-# 0. pnpm を直接インストール
-RUN npm install -g pnpm@9
+# 0. グローバルに必要ツールと pnpm を入れる
+RUN npm install -g pnpm@9 shx rslib
 
 # 1. ルートを作業ディレクトリに
 WORKDIR /repo
@@ -13,10 +13,10 @@ COPY package.json pnpm-lock.yaml* pnpm-workspace.yaml* ./
 #   すべてのサブパッケージの package.json を先にコピー
 COPY packages/*/*/package.json packages/*/*/package.json
 
-# 3. ブラウザ workspace だけ依存インストール
+# 3. ブラウザ workspace だけ依存インストール（devDeps 含む）
 RUN pnpm install --filter "./packages/agent-infra/mcp-servers/browser..." --frozen-lockfile=false
 
-# 4. 本当に必要なソースをコピー
+# 4. 必要ソースをコピー
 COPY packages/agent-infra/mcp-servers/browser \
      packages/agent-infra/mcp-servers/browser
 COPY packages/agent-infra/mcp-servers/filesystem/src \
@@ -24,6 +24,9 @@ COPY packages/agent-infra/mcp-servers/filesystem/src \
 
 # 5. ビルド
 RUN pnpm --filter "./packages/agent-infra/mcp-servers/browser..." run build
+
+# 6. devDependencies を削除して容量削減
+RUN pnpm prune --prod
 
 ######################## 2) runtime  stage ######################
 FROM node:22-alpine AS release
@@ -35,6 +38,7 @@ WORKDIR /app
 COPY --from=builder /repo/packages/agent-infra/mcp-servers/browser/dist ./dist
 COPY --from=builder /repo/packages/agent-infra/mcp-servers/browser/package*.json ./
 
+# 本番依存のみインストール
 RUN npm install -g pnpm@9 \
  && pnpm install --prod --frozen-lockfile=false --ignore-scripts
 
