--- a/packages/agent-infra/mcp-servers/browser/Dockerfile
+++ b/packages/agent-infra/mcp-servers/browser/Dockerfile
@@ -1,34 +1,30 @@
-######################## 1) build  stage ########################
+######################## 1) build stage ########################
 FROM node:22.12-alpine AS builder
 
-# 0. グローバルに必要ツールと pnpm を入れる
-RUN npm install -g pnpm@9 shx rslib
+# 0. グローバル CLI を入れ、pnpm をセット
+RUN npm install -g pnpm@9 shx
 
 # 1. ルートを作業ディレクトリに
 WORKDIR /repo
 
-# 2. 依存解決に必要なメタファイルだけコピー
+# 2. ワークスペース全体の依存を解決
 COPY package.json pnpm-lock.yaml* pnpm-workspace.yaml* ./
-
-#   すべてのサブパッケージの package.json を先にコピー
 COPY packages/*/*/package.json packages/*/*/package.json
+RUN pnpm install --frozen-lockfile=false               # ← ここで rslib も入る
 
-# 3. ブラウザ workspace だけ依存インストール（devDeps 含む）
-RUN pnpm install --filter "./packages/agent-infra/mcp-servers/browser..." --frozen-lockfile=false
-
-# 4. 必要ソースをコピー
+# 3. 必要ソースをコピー
 COPY packages/agent-infra/mcp-servers/browser \
      packages/agent-infra/mcp-servers/browser
 COPY packages/agent-infra/mcp-servers/filesystem/src \
      packages/agent-infra/mcp-servers/browser/src/filesystem
 
-# 5. ビルド
+# 4. ブラウザ workspace だけビルド
 RUN pnpm --filter "./packages/agent-infra/mcp-servers/browser..." run build
 
-# 6. devDependencies を削除して容量削減
+# 5. 不要な devDependencies を削除して容量削減
 RUN pnpm prune --prod
 
-######################## 2) runtime  stage ######################
+######################## 2) runtime stage ######################
 FROM node:22-alpine AS release
 
 ENV NODE_ENV=production
