--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -1,25 +1,34 @@
+# .github/workflows/build-and-push-image.yml
 name: Build & Publish UI to GHCR
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build-push:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      # 1) リポジトリをチェックアウト
+      - name: Checkout code
+        uses: actions/checkout@v3
 
+      # 2) pnpm をグローバルインストール
       - name: Setup pnpm
-        run: npm install -g pnpm
+        run: npm install -g pnpm@9.12.3
 
-      - name: Install & Build UI
+      # 3) 依存インストールと UI のビルド
+      - name: Install dependencies & Build UI
         env:
+          # Vite のビルドで大きなメモリを使えるようにする
           NODE_OPTIONS: --max_old_space_size=8192
         run: |
           pnpm install
           pnpm --filter ./apps/agent-tars run build:web
 
+      # 4) GHCR にログイン
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -27,11 +36,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.CR_PAT }}
 
+      # 5) Docker イメージをビルド＆プッシュ
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile.ui
+          file: Dockerfile.ui
           push: true
           tags: |
             ghcr.io/wabisabiinc/ui-tars:latest
