--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -3,41 +3,38 @@ name: Build & Publish UI to GHCR
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   build-push:
     runs-on: ubuntu-latest
 
     steps:
-      # 1) リポジトリをチェックアウト
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2) pnpm をグローバルインストール
-      - name: Setup pnpm
+      - name: Setup Node & pnpm
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20.13.1
+      - name: Install pnpm
         run: npm install -g pnpm@9.12.3
 
-      # 3) 依存インストールと UI のビルド
-      - name: Install dependencies & Build UI
+      - name: Install deps & Build UI
         env:
-          # Vite のビルドで大きなメモリを使えるようにする
           NODE_OPTIONS: --max_old_space_size=8192
         run: |
           pnpm install
           pnpm --filter ./apps/agent-tars run build:web
 
-      # 4) GHCR にログイン
-      - name: Log in to GitHub Container Registry
+      - name: Log in to GHCR
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.CR_PAT }}
 
-      # 5) Docker イメージをビルド＆プッシュ
-      - name: Build and push Docker image
+      - name: Build & Push Docker Image
         uses: docker/build-push-action@v5
         with:
           context: .
