--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -5,39 +5,45 @@ on:
   push:
     branches: [ main ]
 
-
+# GITHUB_TOKEN にパッケージ権限は不要なのでこのまま
 permissions:
-  contents: read  
+  contents: read
 
 jobs:
   build-push:
     runs-on: ubuntu-latest
 
     steps:
+      # 1) コード取得
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # 2) Node + pnpm セットアップ
       - name: Setup Node & pnpm
         uses: actions/setup-node@v3
         with:
           node-version: 20.13.1
+          cache: 'pnpm'           # 依存キャッシュして高速化
       - name: Install pnpm
         run: npm install -g pnpm@9.12.3
 
+      # 3) 依存インストール＆UIビルド
       - name: Install deps & Build UI
         env:
           NODE_OPTIONS: --max_old_space_size=8192
         run: |
-          pnpm install
+          pnpm install --frozen-lockfile
           pnpm --filter ./apps/agent-tars run build:web
 
-      - name: Log in to GHCR
+      # 4) GHCR にログイン（ここで CR_PAT を使う）
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.CR_PAT }}
 
+      # 5) Docker イメージのビルド＆プッシュ
       - name: Build & Push Docker Image
         uses: docker/build-push-action@v5
         with:
