--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -1,12 +1,13 @@
-name: Build and Push Docker Image
+# .github/workflows/build-and-push-image.yml
+name: Build & Publish UI to GHCR
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
 
 permissions:
-  contents: read      # ソースを checkout するため
-  packages: write     # GHCR に push するため
+  contents: read      # ソースコードを checkout するため
+  packages: write     # GHCR にプッシュするため
 
 jobs:
   build-and-push:
@@ -16,20 +17,23 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up QEMU
+      - name: Set up QEMU (マルチアーキ用)
         uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Log in to GHCR using CR_PAT
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
+          # ここは GITHUB_TOKEN でも、CR_PAT でも OK
+          # 組織設定で write 権限が取れるなら GITHUB_TOKEN を…
+          # 取りづらければ secrets.CR_PAT を使う
           password: ${{ secrets.CR_PAT }}
 
-      - name: Build and push Docker image
+      - name: Build & Push Docker Image
         uses: docker/build-push-action@v5
         with:
           context: .
